--- a/.github/workflows/print-name.yaml
+++ b/.github/workflows/print-name.yaml
@@ -1,7 +1,8 @@
 workflow:
   name: print-name
   on: push
-    branches: main
+    branches: 
+      - main
   jobs:
     runs-on: ubuntu-latest
     steps:
